Fixed mobile admin tray, fixed letter/word alignment on desktop

--- a/src/components/admin-mobile/style.scss
+++ b/src/components/admin-mobile/style.scss
@@ -72,6 +72,9 @@ $x-hover-image: "../../../images/x-icon_hover.png";
   }
 
   &__tray-overlay {
+    position: absolute;
+    left: 0;
+    top: 0;
     width: 100%;
     height: 100%;
     z-index: 2;
