--- a/src/components/display-text/style.scss
+++ b/src/components/display-text/style.scss
@@ -35,7 +35,7 @@
   }
 
   &--size-medium {
-    @include size(150px);
+    @include size(200px);
     @include bp-size($phone, 100px, 100px, 80px);
     @include bp-size($iphone6p, 90px, 90px, 70px);
     @include bp-size($iphone6, 85px, 85px, 65px);
